--- a/Pharmacy.html
+++ b/Pharmacy.html
@@ -34,7 +34,7 @@
 
         <section-r>
           <div class="container-c">
-            <h2>Reservation</h2>
+            <h2>Pharmacy</h2>
         
             <!-- Personal Details Section -->
             <div class="form-group ">
@@ -99,7 +99,7 @@
                 <textarea id="notes" name="notes" placeholder="Mention if you require every type of medicine in the prescription"></textarea>
             </div>
         
-            <button type="submit"><a href="Thank you.html">Submit Reservation</a></button>
+            <button type="submit"><a href="Thank you.html">Place Order</a></button>
           </div>
           </div>
 
